Fixing alignment on story pages for real. Adding shannon's bio.

--- a/css/custom.css
+++ b/css/custom.css
@@ -25,7 +25,7 @@
 
 .h1mod {
   font-size: 4.3vw;
-  margin-top:-5px;
+  margin-top:-9px;
 }
 
 .btn-NG:hover,
